# esp32_office_controller

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  idf_component.yml  lv_conf.h  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/: lv_conf.h
components/lvgl__lvgl/: lv_conf_template.h
components/lvgl__lvgl/src/core/: lv_indev.c
main/: CMakeLists.txt  Kconfig.projbuild  camera_client.c  camera_client.h  idf_component.yml  lcd.c  lcd.h  main.c  mqtt.c  mqtt.h  mqtt_relay_client.c  mqtt_relay_client.h  wifi.c  wifi.h
